--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  /* font-family: ; */
 }
 
 
@@ -10,5 +11,5 @@
   margin: 0;
   padding: 0; 
   box-sizing: border-box;
-  
 }
+
