--- a/src/App.css
+++ b/src/App.css
@@ -3,9 +3,9 @@
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
-  /* font-family: ; */
+  display: flex;
+  justify-content: center;
 }
-
 
 *{
   margin: 0;
